--- a/report/android.tex
+++ b/report/android.tex
@@ -44,8 +44,8 @@ For the feedback states in the application, there are some approximations, and s
 \item [Drift] - The dinghy is drifting perpendicular to the bearing while the dagger-board is in an upper position
 \item [Heel] - The dinghy has high heel angle
 \item [Reefing] - The dinghy has high heel angle and the pressure on the dagger-board is high
-\item [Wrspeed] - The dinghys speed is above $65.45kn$
-\item [Lrspeed] - The dinghys speed is above $16.8kn$
+\item [Wrspeed] - The dinghys speed is above $65.45~\textrm{kn}$
+\item [Lrspeed] - The dinghys speed is above $16.8~\textrm{kn}$
 \item [Hike] - The dinghy has more then moderate heel angle and the pressure on the dagger-board is between medium and high
 \item [Keelhaul] - The dinghy has an above moderate heel angle and the dagger-board is not in the lowest position
 \item [Runninghigh] - The dinghy is sailing directly windwards with dagger-board high and low heel angle.
