--- a/report/tmp_hw_choice_of_components_kenny.tex
+++ b/report/tmp_hw_choice_of_components_kenny.tex
@@ -1,4 +1,4 @@
-In order to choose what components would be used for the system, the first consideration was the central controller of the system. Because the system was designed to work in conjunction with an app on a smartphone it was agreed that there is no need for heavy computation on the on-board module. This meant that a \gls{mcu} would be sufficient. Because several of the project members had previous experience with the \gls{st} brand \emph{STM32F411RE} and it has a significant number of GPIO ports, useful peripherals (\gls{i2c}, \gls{spi}, timers, etc) and a high clock speed of up to $100MHz$ it was chosen as the core of the on-board module. 
+In order to choose what components would be used for the system, the first consideration was the central controller of the system. Because the system was designed to work in conjunction with an app on a smartphone it was agreed that there is no need for heavy computation on the on-board module. This meant that a \gls{mcu} would be sufficient. Because several of the project members had previous experience with the \gls{st} brand \emph{STM32F411RE} and it has a significant number of GPIO ports, useful peripherals (\gls{i2c}, \gls{spi}, timers, etc) and a high clock speed of up to $100~\textrm{MHz}$ it was chosen as the core of the on-board module. 
 
 The \emph{STM32F411RE} utilizes the \gls{swd} protocol for programming and debugging, the programmer in this case being the programming section of a \emph{NUCLEO-F411RE} development board configured as a programmer. The \gls{swd} header also provides a \gls{uart} channel to communicate with the \gls{mcu}. However, in the interest of convenience for the developers a \emph{FT232RL} chip was added. The \emph{FT232RL} is a \emph{\gls{usb}-to-\gls{uart}} converter that also allows for the \gls{usb} to act as a power source for the board. This eliminated the need for the prototypes to be connected to a power supply and the programmer at times when they were not necessary, giving the more convenient alternative of a common \gls{usb} cable.  The FT232RL was configured only to provide the communication conversion and the power. There are more features available to the FT232RL but no use was found as the on-board module is not connected to a \gls{usb} port for the majority of its operation. 
 
